--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@reduxjs/toolkit": "^2.2.2",
     "bootstrap": "^5.3.3",
     "flag-icon-css": "^4.1.7",
     "i18next": "^23.10.1",
@@ -11,7 +12,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
-    "react-scripts": "5.0.1"
+    "react-redux": "^9.1.0",
+    "react-scripts": "5.0.1",
+    "react-switch": "^7.0.0",
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
