--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-flip-page": "^1.6.4",
     "react-i18next": "^14.1.0",
+    "react-pageflip": "^2.0.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
